# openmc

./: .gitignore  CMakeLists.txt  notes.txt  readme.md
res/: texture_atlas.json
res/shaders/: axis.frag.glsl  basic.comp.glsl  basic.frag.glsl  basic.vert.glsl
src/: a10.cpp  block.cpp  block.h  buffer.cpp  buffer.h  chunk.cpp  chunk.h  entry.cpp  face.cpp  face.h  geometry.cpp  geometry.h  image.cpp  image.h  intersect.cpp  intersect.h  renderer.cpp  renderer.h  shader.h  shader_object.cpp  shader_program.cpp  texture.cpp  texture.h  vao.cpp  vao.h  window.cpp  window.h  world.cpp  world.h
